added alt text for icon

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <main class="main">
       <div class="overlay-main container">
         <div class="icon-box">
-          <span class="icon-star"><img src="images/icon-star.svg" /></span>
+          <span class="icon-star"
+            ><img src="images/icon-star.svg" alt="A star icon in a circle"
+          /></span>
         </div>
 
         <div class="text-box">
